--- a/.github/workflows/main_testingmywebsite.yml
+++ b/.github/workflows/main_testingmywebsite.yml
@@ -62,5 +62,4 @@ jobs:
         with:
           app-name: 'testingmywebsite'
           slot-name: 'Production'
-          package: src/bc-readme-gen
-          
+          package: src/bc-readme-gen/bcreadgen.csproj
