--- a/.github/workflows/main_testingmywebsite.yml
+++ b/.github/workflows/main_testingmywebsite.yml
@@ -22,17 +22,14 @@ jobs:
           dotnet-version: '8.x'
           include-prerelease: true
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
-
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: publish Artifacts
+        run: dotnet publish -c Release -o $src/bc-readme-gen/bcreadgen.csproj
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: $src/bc-readme-gen/bcreadgen.csproj
 
   deploy:
     runs-on: windows-latest
